fix: Fix CSS and page overflows [simulator]

--- a/packages/simulator/src/index.css
+++ b/packages/simulator/src/index.css
@@ -99,9 +99,8 @@ input:focus {
 
 html,
 body {
-	margin: 0;
+	margin: 0 !important;
 	padding: 0;
-	overflow: hidden;
 }
 
 #root {
